--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -24,6 +24,8 @@ jobs:
           raku-version: ${{ matrix.raku-version }}
       - name: Install Dependencies
         run: |
+          sudo apt-get install -y fontconfig locate libharfbuzz-dev
+          sudo apt-get install -y fonts-freefont-otf
           zef install --/test --deps-only .
       - name: Run Tests
         run: zef install . --debug
