--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -24,6 +24,11 @@ jobs:
           raku-version: ${{ matrix.raku-version }}
       - name: Install Dependencies
         run: |
+          brew install fontconfig
+          brew install freetype
+          brew install harfbuzz
+          brew install --cask font-freefont
+          zef install MacOS::NativeLib
           zef install --/test --deps-only .
       - name: Run Tests
         run: zef install . --debug
