--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Install Dependencies
         run: |
             choco install rakudostar
+            choco install wget
+            choco install dejavufonts
             zef --exclude="z" install --debug --/test --test-depends --deps-only .
       - name: Run Tests
         run: zef install . --debug
